# jat

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  tokens.env
src/: run_web.py
src/app/: are_developers_connected_query.py  connected_query_handler.py  connected_usecase.py  developers_relation.py  developers_result.py  entry.py  errors.py  query_handler.py  register.py  register_query_handler.py  registry_for_developers_query.py
src/developers/: developers_repository.py
src/domain/events/: events.py  store.py  stream.py  stream_id.py
src/domain/model/: connection.py  connection_id.py  connection_repository.py  developer.py  developer_not_found.py  developers_repository.py  handle.py
src/github/: user.py  user_not_found.py  user_retriever.py
src/main/: app.py  web.py
src/persistence/: developers_repository.py  event_sourced_connection_repository.py
src/persistence/events/: csv_event_store.py
src/rest/: resource.py
src/rest/resources/: connected.py
src/twitter/: user.py  user_not_found.py  user_retriever.py
src/web/resources/: connected.py  connected_registry.py
tests/acceptance/: test_connected_usecase.py
tests/integration/github/: test_user_retriever.py
tests/integration/twitter/: test_user_retriever.py
tests/unit/app/: test_connected_query_handler.py  test_connected_registry_query_handler.py  test_connected_usecase.py
tests/unit/developers/: test_developers_repository.py
tests/unit/persistence/: test_developers_repository.py  test_event_sourced_connection_repository.py
(+6 files in other folders)
