[tool.poetry]
name = "jat"
version = "0.1.0"
description = "API for checking if developers are connected"
authors = ["Piotr Kopalko <copalco@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pyright = "^1.1.248"
black = "^22.3.0"
autoflake = "^1.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
